--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.api.rule=PathPrefix(`/api`)"
       - "traefik.http.services.api.loadbalancer.server.port=8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   worker:
     build: ./worker
@@ -33,6 +38,13 @@ services:
       - data:/data
     networks:
       - backend
+    labels:
+      - "traefik.enable=false"
+    healthcheck:
+      test: ["CMD", "ls", "/data/messages.log"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
 
   traefik:
     image: traefik:v2.10
@@ -40,15 +52,22 @@ services:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
+      - "--configFile=/etc/traefik/traefik.yml"
     ports:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik/traefik.yml:/etc/traefik/traefik.yml
     networks:
       - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=PathPrefix(`/dashboard`)"
+      - "traefik.http.routers.traefik.service=api@internal"
 
 volumes:
   data:
 
 networks:
   backend:
+
